redesigned scrollbar, bug fixes

--- a/src/entities/Article/ui/ArticleListItem/ArticleListItem.module.scss
+++ b/src/entities/Article/ui/ArticleListItem/ArticleListItem.module.scss
@@ -108,4 +108,11 @@
   &.BIG {
     width: 100%;
   }
+
+  &.SMALL {
+    .card {
+      height: 350px;
+      width: 240px;
+    }
+  }
 }
